import ReaderScreen from "@/src/screen/reader-screen";

export default ReaderScreen;
